--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "NOTICES.txt"
   ],
   "scripts": {
-    "deduplicate": "yarn-deduplicate -s fewer yarn.lock"
+    "deduplicate": "yarn-deduplicate -s fewer yarn.lock",
+    "prepublishOnly": "make DATE=reproducible"
   },
   "devDependencies": {
     "@types/source-map": "0.5.2",
