--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "NOTICES.txt"
   ],
   "scripts": {
+    "build": "make",
     "deduplicate": "yarn-deduplicate -s fewer yarn.lock",
     "prepublishOnly": "make DATE=reproducible"
   },
