--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [20.x, 22.x]
 
     steps:
     - uses: actions/checkout@v4
@@ -42,7 +42,7 @@ jobs:
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v4
-      if: matrix.node-version == '16.x'
+      if: matrix.node-version == '22.x'
       with:
         name: build-artifacts
         path: |
@@ -54,7 +54,7 @@ jobs:
 
     - name: Upload documentation
       uses: actions/upload-artifact@v4
-      if: matrix.node-version == '16.x'
+      if: matrix.node-version == '22.x'
       with:
         name: documentation
         path: docs/
